--- a/mycelium/apps/accounts/templates/accounts/confirm_account_delete.html
+++ b/mycelium/apps/accounts/templates/accounts/confirm_account_delete.html
@@ -4,11 +4,11 @@
 {% block css %}{{block.super}}
 {% generic_field_css %}
 
-{% css "/css/manage_accounts.css" %}
+<link rel="stylesheet" href="{{STATIC_URL}}/css/manage_accounts.css" type="text/css" media="screen, projection"/>
 {% endblock %}
 {% block javascript %}{{block.super}}
 
-{% js "/js/mycelium/manage_accounts.js" %}
+<script src="{{STATIC_URL}}/js/mycelium/manage_accounts.js"></script>
 {% endblock %}
 
 {% block breadcrumb_links %}<a href="{% url core:more_menu %}" >Back to Admin</a>{% endblock %}
