--- a/mycelium/apps/logo_maker/templates/logo_maker/base.html
+++ b/mycelium/apps/logo_maker/templates/logo_maker/base.html
@@ -1,4 +1,4 @@
 {% extends "mycelium_base.html" %}
 {% block css %}{{block.super}}
-	{% css "css/logo_maker.css" %}
+	<link rel="stylesheet" href="{{STATIC_URL}}css/logo_maker.css" type="text/css" media="screen, projection"/>
 {% endblock %}
