--- a/mycelium/templates/404.html
+++ b/mycelium/templates/404.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
 	<title>404 Error - That page doesn't exist!</title>
-	{% css "/css/main.css" %}
-	{% css "/css/error_pages.css" %}
+	<link rel="stylesheet" href="{{STATIC_URL}}/css/main.css" type="text/css" media="screen, projection"/>
+	<link rel="stylesheet" href="{{STATIC_URL}}/css/error_pages.css" type="text/css" media="screen, projection"/>
 </head>
 <body>
 	
