--- a/mycelium/apps/generic_tags/templates/generic_tags/base.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/base.html
@@ -1,5 +1,5 @@
 {% extends "mycelium_base.html" %}
 {% block css %}{{block.super}}
-{% css "css/mycelium_tags.css" %}
-{% css "css/people.css" %}
+<link rel="stylesheet" href="{{STATIC_URL}}css/mycelium_tags.css" type="text/css" media="screen, projection"/>
+<link rel="stylesheet" href="{{STATIC_URL}}css/people.css" type="text/css" media="screen, projection"/>
 {% endblock %}
