--- a/mycelium/apps/groups/templates/groups/search.html
+++ b/mycelium/apps/groups/templates/groups/search.html
@@ -5,7 +5,7 @@
 <script type="text/javascript" charset="utf-8">
 	var SEARCH_URL = "{% url groups:search_results %}";
 </script>
-{% js "/js/mycelium/people_search.js" %}
+<script src="{{STATIC_URL}}/js/mycelium/people_search.js"></script>
 {% endblock %}
 {% block page_content %}
 <div class="main_search_box">
