--- a/mycelium/apps/marketing_site/templates/marketing_site/newsletter/base.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/newsletter/base.html
@@ -3,7 +3,7 @@
 {% block description %}Our monthly newsletter keeps you up-to-date on the latest news in the nonprofit sector - and throws in a great recipe to boot!{% endblock %}
 {% block page_header %}Real people, real voices.{% endblock %}
 {% block css %}{{block.super}}
-{% css "css/newsletter.css" %}
+<link rel="stylesheet" href="{{STATIC_URL}}css/newsletter.css" type="text/css" media="screen, projection"/>
 {% endblock %}
 
 {% block page_content %}
