--- a/mycelium/apps/people/templates/people/base.html
+++ b/mycelium/apps/people/templates/people/base.html
@@ -1,4 +1,4 @@
 {% extends "mycelium_base.html" %}
 {% block css %}{{block.super}}
-{% css "css/people.css" %}
+<link rel="stylesheet" href="{{STATIC_URL}}css/people.css" type="text/css" media="screen, projection"/>
 {% endblock %}
