--- a/mycelium/apps/spreadsheets/templates/spreadsheets/spreadsheet.html
+++ b/mycelium/apps/spreadsheets/templates/spreadsheets/spreadsheet.html
@@ -6,8 +6,8 @@
 {% endblock %}
 {% block javascript %}{{block.super}}
 {% generic_tags_js %}
-{% js "/js/mycelium/people_common.js" %}
-{% js "/js/mycelium/spreadsheets.js" %}
+<script src="{{STATIC_URL}}/js/mycelium/people_common.js"></script>
+<script src="{{STATIC_URL}}/js/mycelium/spreadsheets.js"></script>
 
 {% if request.GET.edit == "ON" or form.instance.full_name == "Unnamed Spreadsheet"  %}
 <script type="text/javascript" charset="utf-8">
