--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -22,7 +22,7 @@
 		<div class="page_top_hook">Contacts, Donations, and Volunteers, all in one place.</div>
 		<div class="row">
 				
-				<div class="centered_block"><img src="{% media_url "images/marketing-headache_vs_simple.png" %}" /></div>
+				<div class="centered_block"><img src="{% static "images/marketing-headache_vs_simple.png" %}" /></div>
 
 				<p>Many small nonprofits have their information scattered across a number of systems: there's the contacts program, the volunteer log, the donors program, and the various lists of participants, major donors, and the people who are coming to Thursday's event.  </p>
 
