--- a/mycelium/apps/flight_control/templates/flight_control/base.html
+++ b/mycelium/apps/flight_control/templates/flight_control/base.html
@@ -1,12 +1,19 @@
 {% extends "base.html" %}
 {% block css %}{{block.super}}
-	<link rel="stylesheet" href="{{STATIC_URL}}css/mycelium_base.css" type="text/css" media="screen, projection"/>
-	<link rel="stylesheet" href="{{STATIC_URL}}/css/contrib/1140/1140.css" type="text/css" media="screen, projection"/>
-	<link rel="stylesheet" href="{{STATIC_URL}}/css/flight_control.css" type="text/css" media="screen, projection"/>
+	<link rel="stylesheet" href="{{STATIC_URL}}css/style.css" type="text/css" media="screen, projection"/>
+	<link rel="stylesheet" href="{{STATIC_URL}}css/main.css" type="text/css" media="screen, projection"/>
+	<link rel="stylesheet" href="{{STATIC_URL}}css/contrib/jquery-ui-1.8.10.custom.css" type="text/css" media="screen, projection"/>
+	<link rel="stylesheet" href="{{STATIC_URL}}css/mycelium_elements.css" type="text/css" media="screen, projection"/>
+	<link rel="stylesheet" href="{{STATIC_URL}}css/contrib/fileuploader.css" type="text/css" media="screen, projection"/>
+	<link rel="stylesheet" href="{{STATIC_URL}}css/contrib/colorbox.css" type="text/css" media="screen, projection"/>
+	<link rel="stylesheet" href="{{STATIC_URL}}css/flight_control.css" type="text/css" media="screen, projection"/>
 {% endblock %}
-{% block base_js %}<script src="{{STATIC_URL}}js/mycelium_base.js"></script>{% endblock %}
+{% block base_js %}
+	<script src="{{STATIC_URL}}js/mycelium/mycelium_elements.js"></script>
+	<script src="{{STATIC_URL}}js/mycelium/mycelium_top_search.js"></script>
+	<script src="{{STATIC_URL}}js/mycelium/mycelium_common.js"></script>
+{% endblock %}
 {% block javascript %}{{block.super}}
-	<script src="{{STATIC_URL}}js/mycelium_core.js"></script>
 	<script src="{{STATIC_URL}}js/mycelium/flight_control.js"></script>
 <script>
 var GLOBAL_SEARCH_URL = "{% url flight_control:search_results %}";
