used django-compressor versioned images

--- a/mycelium/apps/logo_maker/templates/logo_maker/list.html
+++ b/mycelium/apps/logo_maker/templates/logo_maker/list.html
@@ -38,7 +38,7 @@ function cancel_another_logo_btn_clicked() {
 </form>
 
 <section_title>{{l.name}}</section_title>
-<img src="{% static  t %}" class="logo_thumb"/>
+<img src="{% versioned_static  t %}" class="logo_thumb"/>
 {% endthumbnail %}
 </logo_info>
 
