--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -1,5 +1,5 @@
 {% extends "marketing_site/base.html" %}
-{% load i18n generic_fields friendly_data_formatting versioned_static %}
+{% load i18n generic_fields friendly_data_formatting %}
 {% block title %}Membership management features that small nonprofits actually need.{% endblock %}
 {% block description %}We built GoodCloud collaboratively with small nonprofits, to do the things you do every day. Contact, volunteer, and donor tracking - it's all here.{% endblock %}
 
