--- a/mycelium/apps/marketing_site/templates/marketing_site/newsletter.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/newsletter.html
@@ -47,7 +47,7 @@
 				<div class="title">Read back issues of <span class="the_good_times">The Good Times</span></div>
 			
 				<a href="{% url marketing_site:newsletter_issue 2011 7 %}" class="issue issue_2011_07">
-					<div class="cover_image"><img src="{% static  "images/newsletters/2011-08/burger-crop.jpg"%}" /></div> 
+					<div class="cover_image"><img src="{% versioned_static  "images/newsletters/2011-08/burger-crop.jpg"%}" /></div> 
 					<div class="title_and_date">
 						<span class="date">July 2011</span>
 					</div>
