--- a/mycelium/apps/marketing_site/templates/marketing_site/tour.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/tour.html
@@ -18,7 +18,7 @@
 			<div class="tour_video">
 			<iframe class="video_box" src="http://player.vimeo.com/video/23807297?title=0&amp;byline=0&amp;portrait=0" width="640" height="360" frameborder="0"></iframe>
 			{# <iframe class="video_box" width="640" height="390" src="https://www.youtube.com/embed/PvTsZfx2zZs?rel=0" frameborder="0" allowfullscreen></iframe> #}
-			{# <img src="{% static  "images/video-coming-soon.png" %}"/> #}
+			{# <img src="{% versioned_static  "images/video-coming-soon.png" %}"/> #}
 			</div>
 			<p><b>Update:</b> GoodCloud has brand-new look since we recorded this video - check out the screenshots to see it! </p>
 
