--- a/mycelium/templates/500.html
+++ b/mycelium/templates/500.html
@@ -13,7 +13,7 @@
 	<div id="error_message">
 		<div class="adorable_image">
 			<img src="https://goodcloud1.s3.amazonaws.com/images/icon-sadcloud-400.png" />
-			{# <img src="{% static  "images/icon-sadcloud-400.png" %}" /> #}
+			{# <img src="{% versioned_static  "images/icon-sadcloud-400.png" %}" /> #}
 		</div>
 	
 		<div class="detail_box">
