--- a/mycelium/apps/data_import/templates/data_import/base.html
+++ b/mycelium/apps/data_import/templates/data_import/base.html
@@ -3,5 +3,5 @@
 	<link rel="stylesheet" href="{{STATIC_URL}}css/import.css" type="text/css" media="screen, projection"/>
 {% endblock %}
 {% block javascript %}{{block.super}}
-	<script src="{{STATIC_URL}}/js/mycelium/data_import.js"></script>
+	<script src="{{STATIC_URL}}js/mycelium/data_import.js"></script>
 {% endblock %}
