--- a/mycelium/apps/generic_tags/templates/generic_tags/manage.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/manage.html
@@ -7,8 +7,8 @@
 {% endblock %}
 {% block javascript %}{{block.super}}
 {% generic_tags_js %}
-<script src="{{STATIC_URL}}/js/mycelium/people_common.js"></script>
-<script src="{{STATIC_URL}}/js/mycelium/manage_tags.js"></script>
+<script src="{{STATIC_URL}}js/mycelium/people_common.js"></script>
+<script src="{{STATIC_URL}}js/mycelium/manage_tags.js"></script>
 <script>
 $(function(){
 
