--- a/mycelium/apps/marketing_site/templates/marketing_site/base.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/base.html
@@ -9,9 +9,9 @@
 	<link rel="stylesheet" href="{{STATIC_URL}}css/login.css" type="text/css" media="screen, projection"/>
 	<link rel="stylesheet" href="{{STATIC_URL}}css/signup.css" type="text/css" media="screen, projection"/>
 	{# 1140 #}
-	<!--[if lte IE 9]><link rel="stylesheet" href="{{STATIC_URL}}/css/contrib/1140/ie.css" type="text/css" media="screen, projection"/><![endif]-->
+	<!--[if lte IE 9]><link rel="stylesheet" href="{{STATIC_URL}}css/contrib/1140/ie.css" type="text/css" media="screen, projection"/><![endif]-->
 {% endblock %}
-{% block base_js %}{{block.super}}
+{% block base_js %}
 	<script src="{{STATIC_URL}}js/lib/preloadCssImages.jQuery.mycelium.js"></script>
 	<script src="{{STATIC_URL}}js/contrib/jquery.autogrow.js"></script>
 	<script src="{{STATIC_URL}}js/contrib/jquery.autogrow.textarea.js"></script>
