--- a/mycelium/apps/dashboard/templates/dashboard/dashboard.html
+++ b/mycelium/apps/dashboard/templates/dashboard/dashboard.html
@@ -2,12 +2,12 @@
 {% load i18n %}
 {% block title %}Dashboard{% endblock %}
 {% block css %}{{block.super}}
-<link rel="stylesheet" href="{{STATIC_URL}}/css/generic_fields.css" type="text/css" media="screen, projection"/>
-<link rel="stylesheet" href="{{STATIC_URL}}/css/dashboard.css" type="text/css" media="screen, projection"/>
+<link rel="stylesheet" href="{{STATIC_URL}}css/generic_fields.css" type="text/css" media="screen, projection"/>
+<link rel="stylesheet" href="{{STATIC_URL}}css/dashboard.css" type="text/css" media="screen, projection"/>
 {% endblock %}
 {% block javascript %}{{block.super}}
-<script src="{{STATIC_URL}}/js/mycelium/dashboard.js"></script>
-<script src="{{STATIC_URL}}/js/mycelium/conversation_and_gist.js"></script>
+<script src="{{STATIC_URL}}js/mycelium/dashboard.js"></script>
+<script src="{{STATIC_URL}}js/mycelium/conversation_and_gist.js"></script>
 {% endblock %}
 
 {% block breadcrumb %}{% endblock %}
