--- a/mycelium/apps/organizations/templates/organizations/base.html
+++ b/mycelium/apps/organizations/templates/organizations/base.html
@@ -1,4 +1,6 @@
 {% extends "mycelium_base.html" %}
 {% block css %}{{block.super}}
+{% compress css %}
 <link rel="stylesheet" href="{{STATIC_URL}}css/people.css" type="text/css" media="screen, projection"/>
+{% endcompress %}
 {% endblock %}
