--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -3,12 +3,15 @@
 {% block title %}People - {{person.full_name}}{% endblock %}
 {% block css %}{{block.super}}
 {% generic_field_css %}
+{% compress css %}
 <link rel="stylesheet" href="{{STATIC_URL}}css/people_volunteer.css" type="text/css" media="screen, projection"/>
 <link rel="stylesheet" href="{{STATIC_URL}}css/people_donor.css" type="text/css" media="screen, projection"/>
 <link rel="stylesheet" href="{{STATIC_URL}}css/people_conversations.css" type="text/css" media="screen, projection"/>
 <link rel="stylesheet" href="{{STATIC_URL}}css/people_tags.css" type="text/css" media="screen, projection"/>
+{% endcompress %}
 {% endblock %}
 {% block javascript %}{{block.super}}
+{% compress js %}
 <script src="{{STATIC_URL}}js/mycelium/people_volunteer.js"></script>
 <script src="{{STATIC_URL}}js/mycelium/people_donations.js"></script>
 <script src="{{STATIC_URL}}js/mycelium/people_conversations.js"></script>
@@ -16,6 +19,7 @@
 <script src="{{STATIC_URL}}js/mycelium/people_common.js"></script>
 <script src="{{STATIC_URL}}js/mycelium/people_person.js"></script>
 <script src="{{STATIC_URL}}js/mycelium/conversation_and_gist.js"></script>
+{% endcompress %}
 {% generic_tags_js %}
 {% if request.GET.edit == "ON" or form.instance.full_name == "Unnamed Person"  %}
 <script type="text/javascript" charset="utf-8">
