--- a/mycelium/apps/accounts/templates/accounts/base_login.html
+++ b/mycelium/apps/accounts/templates/accounts/base_login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Log in to GoodCloud{% endblock %}
 {% block css %}{{block.super}}
+{% compress css %}
 	<link rel="stylesheet" href="{{STATIC_URL}}css/style.css" type="text/css" media="screen, projection"/>
 	<link rel="stylesheet" href="{{STATIC_URL}}css/main.css" type="text/css" media="screen, projection"/>
 	<link rel="stylesheet" href="{{STATIC_URL}}css/contrib/jquery-ui-1.8.10.custom.css" type="text/css" media="screen, projection"/>
@@ -8,6 +9,7 @@
 	<link rel="stylesheet" href="{{STATIC_URL}}css/contrib/fileuploader.css" type="text/css" media="screen, projection"/>
 	<link rel="stylesheet" href="{{STATIC_URL}}css/contrib/colorbox.css" type="text/css" media="screen, projection"/>
 	<link rel="stylesheet" href="{{STATIC_URL}}css/login.css" type="text/css" media="screen, projection"/>
+{% endcompress %}
 {% endblock %}
 
 {% block nav %}{% endblock %}
