--- a/mycelium/apps/logo_maker/templates/logo_maker/list.html
+++ b/mycelium/apps/logo_maker/templates/logo_maker/list.html
@@ -2,6 +2,7 @@
 {% load humanize thumbnail %}
 {% block title %}Logo Maker - All Logos{% endblock %}
 {% block javascript %}{{block.super}}
+{% compress js %}
 <script type="text/javascript" charset="utf-8">
 $(function(){
 	$(".add_another_logo_btn").live("click",add_another_logo_btn_clicked);
@@ -16,6 +17,7 @@ function cancel_another_logo_btn_clicked() {
 	$(".add_another_logo_btn").show();
 }
 </script>
+{% endcompress %}
 {% endblock %}
 {% block breadcrumb %}{% endblock %}
 {% block page_content %}
