--- a/mycelium/apps/marketing_site/templates/marketing_site/base.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/base.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block css %}{{block.super}}
+{% compress css %}
 	<link rel="stylesheet" href="{{STATIC_URL}}css/style.css" type="text/css" media="screen, projection"/>
 	<link rel="stylesheet" href="{{STATIC_URL}}css/main.css" type="text/css" media="screen, projection"/>
 	<link rel="stylesheet" href="{{STATIC_URL}}css/contrib/jquery-ui-1.8.10.custom.css" type="text/css" media="screen, projection"/>
@@ -10,17 +11,21 @@
 	<link rel="stylesheet" href="{{STATIC_URL}}css/signup.css" type="text/css" media="screen, projection"/>
 	{# 1140 #}
 	<!--[if lte IE 9]><link rel="stylesheet" href="{{STATIC_URL}}css/contrib/1140/ie.css" type="text/css" media="screen, projection"/><![endif]-->
+{% endcompress %}
 {% endblock %}
-{% block base_js %}
-	<script src="{{STATIC_URL}}js/lib/preloadCssImages.jQuery.mycelium.js"></script>
+{% block base_js %}{{block.super}}
+{% compress js %}
 	<script src="{{STATIC_URL}}js/contrib/jquery.autogrow.js"></script>
 	<script src="{{STATIC_URL}}js/contrib/jquery.autogrow.textarea.js"></script>
 	<script src="{{STATIC_URL}}js/contrib/jquery.ba-bbq.min.js"></script>
+
+{% endcompress %}
+{% endblock %}
+{% block javascript %}{{block.super}}
+	<script src="{{STATIC_URL}}js/lib/preloadCssImages.jQuery.mycelium.js"></script>
 	<script src="{{STATIC_URL}}js/mycelium/marketing_site.js"></script>
 	<script src="{{STATIC_URL}}js/mycelium/signup.js"></script>
 	<script src="{{STATIC_URL}}js/mycelium/marketing_tabs.js"></script>
-{% endblock %}
-{% block javascript %}{{block.super}}
 {% endblock %}
 {% block content %}
 	{% include "marketing_site/_top_nav.html" %}
