--- a/mycelium/apps/marketing_site/templates/marketing_site/screenshots.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/screenshots.html
@@ -4,10 +4,12 @@
 {% block description %}Watch a video interview with GoodCloud's CEO, and see how it helps nonprofits organize and run more easily!{% endblock %}
 
 {% block css %}{{block.super}}
+{% compress css %}
 <link rel="stylesheet" href="{{STATIC_URL}}css/contrib/tn3/tn3.css" type="text/css" media="screen, projection"/>
+{% endcompress %}
 {% endblock %}
 {% block javascript %}{{block.super}}
-
+{% compress js  %}
 <script src="{{STATIC_URL}}js/lib/jquery.tn3lite.min.js"></script>
 <script>
 $(function(){
@@ -22,7 +24,7 @@ $(function(){
     
 });
 </script>
-
+{% endcompress %}
 
 {% endblock  %}
 {% block page_header %}Watch it in action.{% endblock %}
