--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -17,19 +17,21 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   {# <!--	Uncomment if you are specifically targeting less enabled mobile browsers   --> #}  {# <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2"> #}
 
-  {% compress css %}{% block css %}{% endblock %}{% endcompress %}
+  {% block css %}{% endblock %}
   {% compress js %}
   <script src="{{STATIC_URL}}js/lib/modernizr-1.6.min.js" ></script>
   <script src="{{STATIC_URL}}js/contrib/jquery-1.4.3.min.js" ></script>
   {% endcompress %}
 
-  {% compress js %}{% block base_js %}
+  {% block base_js %}
+  {% compress js %}
 		<script src="{{STATIC_URL}}js/contrib/jquery-ui.js" ></script>
 		<script src="{{STATIC_URL}}js/contrib/jquery.django.csrf.js" ></script>
 		<script src="{{STATIC_URL}}js/plugins.js" ></script>
 		<script src="{{STATIC_URL}}js/script.js" ></script>
 		<script src="{{STATIC_URL}}js/contrib/date.js" ></script>
-  {% endblock %}{% endcompress %}
+  {% endcompress %}
+  {% endblock %}
   {% analytical_head_bottom %}
 	<link href='https://fonts.googleapis.com/css?family=Droid+Sans:regular,bold&v1' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold,bolditalic&v1' rel='stylesheet' type='text/css'>
@@ -42,12 +44,12 @@
 
 {% endblock %}
 {% analytical_body_bottom %}
-{% compress js %}{% block javascript %}
+{% block javascript %}{% compress js %}
 <!--[if lt IE 7 ]>
   <script src="{{STATIC_URL}}js/lib/dd_belatedpng.js"></script>
   <script>DD_belatedPNG.fix('img, .png_bg');</script>
 <![endif]-->
-{% endblock %}{% endcompress %}
+{% endcompress %}{% endblock %}
 </body>
 {% endblock %}
 </html>
