--- a/mycelium/apps/mycelium_core/templates/mycelium_core/template_tags/generic_fields/css.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/template_tags/generic_fields/css.html
@@ -1,1 +1,1 @@
-{% compress css %}<link rel="stylesheet" href="{{STATIC_URL}}css/generic_fields.css" type="text/css" media="screen, projection"/>{% endcompress %}
+{% load compress %}{% compress css %}<link rel="stylesheet" href="{{STATIC_URL}}css/generic_fields.css" type="text/css" media="screen, projection"/>{% endcompress %}
